# Terraris---Voxel

./: LICENSE-GLAD  README.md  meson.build
data/: blocks.json
include/: Camera.h  Shader.h
include/glad/: glad.h
shaders/: basic.fs  basic.vs  crosshair.fs  crosshair.vs  light.fs  light.vs  ray.fs  ray.vs
src/: Camera.cpp  Shader.cpp  glad.c  main.cpp
